--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+          cache: yarn
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
@@ -42,3 +43,5 @@ jobs:
           K8S_VERSION: ${{ matrix.k8s_version }}
           PREBUNDLER_ACCESS_KEY_ID: "${{ secrets.PREBUNDLER_ACCESS_KEY_ID }}"
           PREBUNDLER_SECRET_ACCESS_KEY: "${{ secrets.PREBUNDLER_SECRET_ACCESS_KEY }}"
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
