--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -70,8 +70,7 @@ jobs:
         run: kuby-previews/scripts/install-kind.sh
 
       - name: Run Tests
-        run: ../kuby-previews/scripts/integration.sh
-        working-directory: kuby_test/
+        run: kuby-previews/scripts/integration.sh
         env:
           K8S_VERSION: ${{ matrix.k8s_version }}
           PREBUNDLER_ACCESS_KEY_ID: "${{ secrets.PREBUNDLER_ACCESS_KEY_ID }}"
